<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_soft">ABOUT SOFTWARE</string>
    <string name="app_name">Lost Key Finder</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="ble_setting">Setting</string>
    <string name="ble_setting_ring">Setting Ringtone</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="camera">Camera</string>
    <string name="cancel">Cancel</string>
    <string name="cancle_alarm">Stop Alarm</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="clickConnect">Unconnected</string>
    <string name="click_alarm">Click Alarm</string>
    <string name="click_chang">Modify</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="connecting">Connecting</string>
    <string name="delete">Delete</string>
    <string name="device">Device</string>
    <string name="device_setting">Setting</string>
    <string name="devices_date">date:</string>
    <string name="devices_disconnect">iTAG is Disconnect.</string>
    <string name="devices_doubleclick_dialog">iTAG is Looking For Your Phone.</string>
    <string name="devices_ok">OK</string>
    <string name="disconn_ble">Disconnect</string>
    <string name="disconn_is_alram">Alarm When Bluetooth Disconnected</string>
    <string name="distr_setting">DO NOT DISTURB</string>
    <string name="distr_time_setting">Do not disturb time setting</string>
    <string name="endTime">End Time</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="fgh_mask_bottom">Scroll to move handle</string>
    <string name="fgh_mask_top_pull">Pull To Break Out!</string>
    <string name="fgh_mask_top_release">Release To Break Out!</string>
    <string name="fgh_text_game_over">Game Over</string>
    <string name="fgh_text_loading">Refreshing…</string>
    <string name="fgh_text_loading_failed">Refreshing Failed</string>
    <string name="fgh_text_loading_finish">Refreshing Finished</string>
    <string name="get_permission">Get permission</string>
    <string name="have_lostinfo">have a miss info</string>
    <string name="head_setting">DEVICE PICTURE</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="locaiton_history">Lost History</string>
    <string name="location">Location</string>
    <string name="location_permission_denied">"This sample requires location permission to enable the 'my location' layer. Please try again and grant access to use the location.
If the permission has been permanently denied, it can be enabled from the System Settings > Apps > 'Google Maps API Demos'."</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="name_setting">Name</string>
    <string name="no_bl_tips">The current device does not support the Bluetooth function!</string>
    <string name="other_setting">OTHER SETTING</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="permission_rationale_location">"Access to the location service is required to demonstrate the 'my location' feature, which shows your current location on the map."</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="permission_tips">It can only be used after setting the permission.</string>
    <string name="picker_cancel">取消</string>
    <string name="picker_day">日</string>
    <string name="picker_hour">时</string>
    <string name="picker_minute">分</string>
    <string name="picker_month">月</string>
    <string name="picker_sure">确定</string>
    <string name="picker_title">选择时间</string>
    <string name="picker_year">年</string>
    <string name="recording">Recording</string>
    <string name="recording_seting">RECORDING SETTINGS</string>
    <string name="ring_100">Police</string>
    <string name="ring_alarm">Warning</string>
    <string name="ring_bird">Bird Sound</string>
    <string name="ring_defalut">Default</string>
    <string name="ring_dizi">Whistle</string>
    <string name="ring_jinji">Emergency</string>
    <string name="ring_moring">Morning</string>
    <string name="ring_ring">Bell</string>
    <string name="ring_setting">Select Ringtone</string>
    <string name="ring_warm">Warm</string>
    <string name="search_menu_title">Search</string>
    <string name="select_ring">Setting Ring</string>
    <string name="set_end_time">SET END TIME</string>
    <string name="set_start_time">SET START TIME</string>
    <string name="set_up">Set up</string>
    <string name="setting">Setting</string>
    <string name="srl_component_falsify" formatted="false">"%s falsify area,
 Represents the height[%.1fdp] of drag at run time,
 It does not show anything."</string>
    <string name="srl_content_empty">The content view in SmartRefreshLayout is empty. Do you forget to add it in xml layout file?</string>
    <string name="srl_footer_failed">Load Failed</string>
    <string name="srl_footer_finish">Load Success</string>
    <string name="srl_footer_loading">Loading…</string>
    <string name="srl_footer_nothing">No More Data</string>
    <string name="srl_footer_pulling">Pull Up To Load More</string>
    <string name="srl_footer_refreshing">Wait For Refreshing…</string>
    <string name="srl_footer_release">Release To Load More</string>
    <string name="srl_header_failed">Refresh Failed</string>
    <string name="srl_header_finish">Refresh Success</string>
    <string name="srl_header_loading">Loading…</string>
    <string name="srl_header_pulling">Pull Down To Refresh</string>
    <string name="srl_header_refreshing">Wait For Loading…</string>
    <string name="srl_header_release">Release To Refresh</string>
    <string name="srl_header_secondary">Release To Second Floor</string>
    <string name="srl_header_update">"'Last Update' M-d HH:mm"</string>
    <string name="startTime">Start Time</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="time_distr">Silent Period</string>
    <string name="title_activity_ble_setting">BleSettingActivity</string>
    <string name="title_activity_locaiton_list">LocaitonList</string>
    <string name="title_activity_location">LocationActivity</string>
    <string name="title_activity_time_setting">TimeSetting</string>
    <string name="un_conn_ble">Unconnected</string>
    <string name="unkonw_add">Unknown location</string>
    <string name="userpdf">Description</string>
    <string name="version">Version</string>
    <string name="wifi_distr">WIFI Do Not Disturb</string>
    <string name="your_device">Your Device</string>
    <string name="头像设置">Device Pictures</string>
</resources>
