<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/bg_gary" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:orientation="horizontal" android:id="@id/settingHead" android:background="@color/colorPrimary" android:layout_width="fill_parent" android:layout_height="40.0dip">
        <TextView android:textSize="16.0sp" android:textColor="@color/white" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/setting" android:layout_centerInParent="true" android:layout_centerHorizontal="true" android:layout_centerVertical="true" />
    </RelativeLayout>
    <TextView android:textSize="17.0sp" android:id="@id/unDisalbreSet" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_marginBottom="10.0dip" android:text="@string/distr_setting" android:layout_below="@id/settingHead" android:layout_marginStart="10.0dip" android:layout_alignParentStart="true" />
    <RelativeLayout android:orientation="horizontal" android:id="@id/settingImageBtn" android:background="@drawable/textbg" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_below="@id/unDisalbreSet" android:layout_marginStart="20.0dip" android:layout_marginEnd="20.0dip">
        <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/wifi_distr" android:layout_centerVertical="true" android:layout_marginStart="15.0dip" android:layout_alignParentStart="true" />
        <Switch android:id="@id/wifiSwifth" android:layout_width="wrap_content" android:layout_height="wrap_content" android:thumb="@drawable/bluetooth_switch_thumb" android:layout_centerVertical="true" android:track="@drawable/bluetooth_switch_selector" android:layout_marginEnd="10.0dip" android:layout_alignParentEnd="true" />
    </RelativeLayout>
    <RelativeLayout android:orientation="horizontal" android:id="@id/timeDistr" android:background="@drawable/textbg" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_marginTop="10.0dip" android:layout_below="@id/settingImageBtn" android:layout_marginStart="20.0dip" android:layout_marginEnd="20.0dip">
        <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/time_distr" android:layout_centerVertical="true" android:layout_marginStart="15.0dip" android:layout_marginEnd="10.0dip" android:layout_alignParentStart="true" />
        <Switch android:id="@id/timeSwitch" android:layout_width="wrap_content" android:layout_height="wrap_content" android:thumb="@drawable/bluetooth_switch_thumb" android:layout_centerVertical="true" android:track="@drawable/bluetooth_switch_selector" android:layout_marginEnd="10.0dip" android:layout_alignParentEnd="true" />
        <TextView android:textColor="#ff000000" android:id="@id/timeTextView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="21:30 - 7:00" android:layout_centerVertical="true" android:layout_marginEnd="10.0dip" android:layout_toStartOf="@id/timeSwitch" />
    </RelativeLayout>
    <TextView android:textSize="17.0sp" android:id="@id/recSetting" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/recording_seting" android:layout_below="@id/timeDistr" android:layout_marginStart="10.0dip" android:layout_alignParentStart="true" android:backgroundTint="@color/colorPrimary" />
    <RelativeLayout android:orientation="horizontal" android:id="@id/resLableds" android:background="@drawable/textbg" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_marginTop="10.0dip" android:layout_below="@id/recSetting" android:layout_marginStart="20.0dip" android:layout_marginEnd="20.0dip">
        <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/recording" android:layout_centerVertical="true" android:layout_marginStart="15.0dip" android:layout_alignParentStart="true" />
        <Button android:id="@id/recBtn" android:background="@drawable/go" android:layout_width="35.0dip" android:layout_height="20.0dip" android:layout_centerVertical="true" android:layout_marginEnd="10.0dip" android:layout_alignParentEnd="true" />
        <Switch android:id="@id/rec_switch" android:layout_width="wrap_content" android:layout_height="wrap_content" android:thumb="@drawable/bluetooth_switch_thumb" android:layout_centerVertical="true" android:track="@drawable/bluetooth_switch_selector" android:layout_marginEnd="60.0dip" android:layout_alignParentEnd="true" />
    </RelativeLayout>
    <TextView android:textSize="17.0sp" android:id="@id/about_soft" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/about_soft" android:layout_below="@id/resLableds" android:layout_marginStart="10.0dip" android:layout_alignParentStart="true" />
    <RelativeLayout android:orientation="horizontal" android:id="@id/version_setting" android:background="@drawable/textbg" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_marginTop="10.0dip" android:layout_below="@id/about_soft" android:layout_marginStart="20.0dip" android:layout_marginEnd="20.0dip">
        <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/version" android:layout_centerVertical="true" android:layout_marginStart="15.0dip" android:layout_marginEnd="10.0dip" android:layout_alignParentStart="true" />
        <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:id="@id/tv_version" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="1.8.8" android:layout_centerVertical="true" android:layout_marginEnd="10.0dip" android:layout_alignParentEnd="true" />
    </RelativeLayout>
</RelativeLayout>
