<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@id/bleitem" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.mcxtzhang.swipemenulib.SwipeMenuLayout android:id="@id/text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginStart="5.0dip">
        <RelativeLayout android:background="@drawable/textbg" android:layout_width="fill_parent" android:layout_height="90.0dip" android:layout_marginStart="20.0dip" android:layout_marginEnd="10.0dip" android:layout_alignParentStart="true">
            <ImageView android:id="@id/fdqImg" android:layout_width="80.0dip" android:layout_height="80.0dip" android:layout_marginTop="10.0dip" android:src="@drawable/ic_bledevices" android:layout_centerVertical="true" android:contentDescription="@null" />
            <LinearLayout android:orientation="vertical" android:id="@id/linlay" android:layout_width="100.0dip" android:layout_height="fill_parent" android:layout_centerVertical="true" android:layout_toEndOf="@id/fdqImg">
                <TextView android:textSize="12.0sp" android:textColor="#ff000000" android:gravity="center" android:id="@id/nameText" android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="iTAG" android:lines="2" />
                <LinearLayout android:gravity="bottom" android:layout_gravity="bottom" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent">
                    <ImageView android:id="@id/rssiImg" android:layout_width="40.0dip" android:layout_height="40.0dip" android:layout_marginBottom="5.0dip" android:layout_marginStart="5.0dip" />
                    <ImageView android:id="@id/batteryImage" android:layout_width="fill_parent" android:layout_height="40.0dip" />
                </LinearLayout>
                <TextView android:textSize="20.0sp" android:textColor="#ffff00ff" android:id="@id/bluetooth_list_mac" android:padding="5.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" android:layout_centerVertical="true" android:layout_toEndOf="@id/linlay" android:layout_alignParentEnd="true">
                <TextView android:textSize="11.0sp" android:textColor="#ff000000" android:gravity="center" android:layout_gravity="center" android:id="@id/blesetting" android:background="@drawable/btnbglayout" android:layout_width="145.0dip" android:layout_height="26.0dip" android:text="@string/ble_setting" android:layout_marginStart="5.0dip" />
                <TextView android:textSize="11.0sp" android:textColor="#ff000000" android:gravity="center" android:layout_gravity="center" android:id="@id/bleconn" android:background="@drawable/btnbglayout" android:focusable="false" android:layout_width="145.0dip" android:layout_height="25.0dip" android:layout_marginTop="20.0dip" android:text="@string/un_conn_ble" android:layout_marginStart="5.0dip" />
                <TextView android:textSize="14.0sp" android:textColor="#ff000000" android:gravity="center" android:layout_gravity="center" android:id="@id/bluetooth_click" android:background="@drawable/btnbglayout" android:focusable="false" android:visibility="gone" android:layout_width="110.0dip" android:layout_height="30.0dip" android:layout_marginTop="20.0dip" />
            </LinearLayout>
            <TextView android:id="@id/myText" android:visibility="gone" android:layout_width="200.0dip" android:layout_height="0.0dip" android:text="123"
              xmlns:android="http://schemas.android.com/apk/res/android" />
        </RelativeLayout>
        <TextView android:textColor="@android:color/white" android:gravity="center" android:id="@id/btnDelete" android:background="#ffff0000" android:layout_width="80.0dip" android:layout_height="fill_parent" android:text="@string/delete" />
    </com.mcxtzhang.swipemenulib.SwipeMenuLayout>
</LinearLayout>
